fix jumping bug

--- a/personalSiteCSS.css
+++ b/personalSiteCSS.css
@@ -1,5 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Antic+Slab);
+
 body {
   background-color: #d9d9d9;
+  font-family: 'Antic Slab', serif;
 }
 
 .innerBox {
@@ -10,8 +13,16 @@ body {
   margin-bottom: 3%;
 }
 
-.name, .softwareEngineer {
+.name {
   text-align: center;
+  font-size: 3em;
+  margin: 0;
+}
+
+.softwareEngineer {
+  margin: 0;
+  text-align: center;
+  padding: 0;
 }
 
 .mainPicture {
@@ -22,7 +33,7 @@ body {
 
 .mainPictureText {
    position: absolute;
-   top: 35%;
+   top: 65%;
    left: 55%;
    width: 40%;
    color: white;
@@ -99,6 +110,9 @@ body {
   background: #f5f5f5;
 }
 
+.navBar li:target a{
+  background: #d9d9d9;
+}
 /*.navBar a:active {
   background-color: grey;
 }*/
